--- a/src/components/GifList.css
+++ b/src/components/GifList.css
@@ -2,6 +2,27 @@
   list-style: none;
   margin: 1rem auto;
   padding: 0;
-  width: 90%;
-  max-width: 40rem;
+  max-width: 60rem;
+  align-items: center;
+}
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+@media (min-width: 876px) {
+  ul:after {
+    content: ".";
+    clear: both;
+    height: 0;
+    display: block;
+    visibility: hidden;
+  }
+
+  ul li {
+    margin: 0 0 0 30px;
+    padding: 20px 20px 20px 20px;
+    display: block;
+    width: 50%;
+  }
 }
