--- a/src/index.css
+++ b/src/index.css
@@ -13,19 +13,16 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  min-width: 1000px;
   z-index: -10;
   zoom: 1;
   background-color: rgb(223, 210, 186);
 }
 
-.slide-in-left-enter {
-  transform: tranlateX(-100%);
+.container {
+  margin: auto;
+  padding-left: 20px;
+  padding-right: 20px;
 }
-
-.center {
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+body #root {
+  height: 20vw;
 }
